<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.6.3</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>
	<groupId>iris-gateway</groupId>
	<artifactId>iris-backend-service</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>IRIS Backend Services</name>
	<description>Backend services provider for IRIS (e.g. the location search provider)</description>
	
	<properties>
		<java.version>17</java.version>
		<docker.image.prefix>inoeg</docker.image.prefix>
		<version.tag>${project.version}</version.tag>
		<hibernate.search.version>6.1.0.Final</hibernate.search.version>
		<xmlprojector.version>1.4.22</xmlprojector.version>
	</properties>
	
	<profiles>
		<profile>
			<id>localDev</id>
			<activation>
				<file>
					<exists>src/main/resources/application-local.properties</exists>
				</file>
			</activation>

			<properties>
				<spring.profiles.active>dev,local</spring.profiles.active>
			</properties>
		</profile>
	</profiles>
	
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-webflux</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-configuration-processor</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<scope>runtime</scope>
			<version>2.1.210</version><!-- Added to fix current vulnerability until 
				Spring is adjusted. avd.aquasec.com/nvd/cve-2021-23463 -->
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
			<version>42.3.2</version><!-- Added to fix current vulnerability until 
				Spring is adjusted. avd.aquasec.com/nvd/cve-2022-21724 -->
		</dependency>
		<dependency>
			<groupId>org.flywaydb</groupId>
			<artifactId>flyway-core</artifactId>
			<version>8.4.3</version><!-- Added to fix current vulnerability in h2 
				until Spring is adjusted. avd.aquasec.com/nvd/cve-2021-23463 -->
		</dependency>
		<dependency>
			<groupId>org.modelmapper</groupId>
			<artifactId>modelmapper</artifactId>
			<version>3.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.data</groupId>
			<artifactId>spring-data-commons</artifactId>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>

		<!-- for health checks used in k8s cluster -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<dependency>
			<groupId>io.micrometer</groupId>
			<artifactId>micrometer-registry-prometheus</artifactId>
			<scope>runtime</scope>
		</dependency>

		<!-- Third party libs -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
		</dependency>
		<dependency>
			<groupId>com.slack.api</groupId>
			<artifactId>slack-api-client</artifactId>
			<version>1.18.0</version>
		</dependency>

		<!-- For XML projection of RKI PLZTool data -->
		<dependency>
			<groupId>org.xmlbeam</groupId>
			<artifactId>xmlprojector</artifactId>
			<version>${xmlprojector.version}</version>
		</dependency>

		<!-- jsonrpc4j -->
		<dependency>
			<groupId>com.github.briandilley.jsonrpc4j</groupId>
			<artifactId>jsonrpc4j</artifactId>
			<version>1.6</version>
		</dependency>
		<dependency>
			<groupId>com.sun.xml.ws</groupId>
			<artifactId>jaxws-ri</artifactId>
			<version>2.3.5</version><!-- Must be <3 because jsonrpc4j need javax.jws.WebParam! -->
			<type>pom</type>
		</dependency>

		<!-- fuzzy search -->
		<dependency>
			<groupId>org.hibernate.search</groupId>
			<artifactId>hibernate-search-mapper-orm</artifactId>
			<version>${hibernate.search.version}</version>
		</dependency>
		<dependency>
			<groupId>org.hibernate.search</groupId>
			<artifactId>hibernate-search-backend-lucene</artifactId>
			<version>${hibernate.search.version}</version>
		</dependency>

		<!--Spring Docs -->
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-ui</artifactId>
			<version>1.6.5</version>
		</dependency>
	</dependencies>

	<build>
		<finalName>${project.artifactId}-${version.tag}</finalName>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<profiles>
						<profile>${spring.profiles.active}</profile>
					</profiles>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
					<image>
						<name>${docker.image.prefix}/${project.artifactId}:${version.tag}</name>
					</image>
					<docker>
						<publishRegistry>
							<username>${env.DOCKER_HUB_USER}</username>
							<password>${env.DOCKER_HUB_PW}</password>
						</publishRegistry>
					</docker>
				</configuration>
			</plugin>

			<plugin>
				<groupId>pl.project13.maven</groupId>
				<artifactId>git-commit-id-plugin</artifactId>
				<configuration>
					<offline>true</offline>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
